Bump sources back to Java 8, removed usage of Java 9+ features